--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,10 +4,8 @@
 name: 'dbt_northwind'
 version: '1.0.0'
 config-version: 2
-
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
-
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
@@ -17,27 +15,23 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
-
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
-
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
-
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
   dbt_northwind:
-    # Applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
-
-
-
+      +schema: staging
+    marts:
+      +materialized: table
+      +schema: marts
 seeds:
   dbt_northwind:
     erp_northwind:
