foram criadas as stgs produtos, categorias e fornecedores.

--- a/models/staging/erp_northwind/sources.yml
+++ b/models/staging/erp_northwind/sources.yml
@@ -6,5 +6,12 @@ sources:
     schema: erp_northwind
     tables: 
       - name: products
+        columns: 
+        - name: product_id
+          tests:
+           - not_null
+           - unique
+           
+
       - name: categories
       - name: suppliers
