--- a/models/staging/erp_northwind/sources.yml
+++ b/models/staging/erp_northwind/sources.yml
@@ -1,17 +1,23 @@
 version: 2
-
 sources:
   - name: erp
     description: Fonte SAP de vendas da Northwind
     schema: erp_northwind
-    tables: 
+    tables:
       - name: products
-        columns: 
-        - name: product_id
-          tests:
-           - not_null
-           - unique
-           
-
+        columns:
+          - name: product_id
+            tests:
+              - unique
+              - not_null
       - name: categories
       - name: suppliers
+      - name: employees
+      - name: orders
+        description: Uma linha por pedido (por NF). Inclui pedidos cancelados e deletados.
+        columns:
+          - name: order_id
+            tests:
+              - unique
+              - not_null
+      - name: order_details
